--- a/episode_3/lang/fr/text/abschnitt_18/loca.csv
+++ b/episode_3/lang/fr/text/abschnitt_18/loca.csv
@@ -17,7 +17,7 @@ sequences_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber#1;[The two clash, a
 spokentexts_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber_st_1_direction;hard fighting
 spokentexts_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber_st_1;Non !
 spokentexts_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber_st_2_direction;hard fighting
-spokentexts_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber_st_2;Pourquoi... ne pouvez-vous pas juste... me laissez tranquille !
+spokentexts_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber_st_2;Pourquoi... ne pouvez-vous pas juste... me laisser tranquille !
 sequences_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber#4;[The doctor grabs the Arab higher and finally pushes him over the railing. The Arab can grab the end of the gangway to and to holds itself  on it. ]
 spokentexts_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber_st_3_direction;panting, exhausted
 spokentexts_a18_nebendeck_seq_a18_nebendeck_angriff_auf_araber_st_3;Humphhh !
@@ -82,7 +82,7 @@ sequences_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers#7;[The Arab and
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers_st_5;Il n'arrive plus a supporter ses fautes, tout comme sa morne existence.
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers_st_6_direction;anxious
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers_st_6;Qui êtes-vous ? Que voulez-vous ?
-spokentexts_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers_st_7;Un homme qui comprend l'étiquette et l'honneur mais surtout qui un lâche lui-même.
+spokentexts_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers_st_7;Un homme qui comprend l'étiquette et l'honneur mais surtout qui est lui-même un lâche.
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers_st_8;Et qui, à cause d'une vanité meurtrie, est accablé d'une immense culpabilité.
 sequences_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers#12;[The doctor's  holds up his hands as adefense, then turns to normal position again.]
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_auftritt_des_butlers_st_9_direction;insecure, anxious
@@ -116,7 +116,7 @@ spokentexts_a18_vorderdeck_seq_a18_vorderdeck_jagd_ankunft_st_2_direction;placat
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_jagd_ankunft_st_2;Détendez-vous.
 sequences_a18_vorderdeck_seq_a18_vorderdeck_jagd_ankunft#4;[The doctor puts himself in the speech position (idle), the Arab too.]
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_jagd_ankunft_st_3_direction;desperate, whiny
-spokentexts_a18_vorderdeck_seq_a18_vorderdeck_jagd_ankunft_st_3;Pourquoi ne pouvez-vous simplement pas laisser tranquille ? C'est toujours la même vieille rengaine !
+spokentexts_a18_vorderdeck_seq_a18_vorderdeck_jagd_ankunft_st_3;Pourquoi ne pouvez-vous simplement pas me laisser tranquille ? C'est toujours la même vieille rengaine !
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_1;Je dois faire le sale boulot pour vous dans le musée. Donc, vous ne pouvez pas tirer sur moi OU SUR LUI !
 sequences_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt#3;[The Butler sticks the weapon stronger under the jaw of the Arab, he must hold himself not to shoot him. Finally he relaxes and puts the weapon away.]
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_4_direction;friendly, relaxed
@@ -126,12 +126,12 @@ sequences_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt#6;[The Arab runs to the
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_5_direction;gets a puch by surprise
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_5;Qu'est-ce... HUMPH !
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_6;Ne me reparlez plus jamais comme cela, est-ce bien compris ?
-spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_7;J'ai besoin de vous pour voler l'oeil. Mais je pourrais être submergé par un sentiment de haine tel que cela me ferais oublier cette raison !
+spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_7;J'ai besoin de vous pour voler l'Oeil. Mais je pourrais être submergé par un sentiment de haine tel que cela me ferait oublier cette raison !
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_8;Et il y a des choses pires que je pourrais faire que simplement vous tirez dessus.
 sequences_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt#11;[The butler let go the Arab, stands up normal and smoothes his clothes. The Arab is still kneeling at the rail, looking at the Butler hostile.]
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_9;Je vous conseille de retourner dans votre cellule. Vous devez être en forme au Caire.
 sequences_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt#13;[The butler leaves the scene and speaks...]
-spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_10;De mon coté, j'ai encore une confession à écrire.
+spokentexts_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt_st_10;De mon côté, j'ai encore une confession à écrire.
 sequences_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt#15;[Fade out.]
 sequences_a18_vorderdeck_seq_a18_vorderdeck_mord_am_arzt#16;[End of section.]
 sequences_a18_vorderdeck_seq_a18_vorderdeck_pistole#0;[The Butler pulls out a gun, points it at the doctor.]
@@ -148,7 +148,7 @@ spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_5;Je lui tends juste un
 sequences_a18_vorderdeck_seq_a18_vorderdeck_pistole#7;[Butler looks back again to the doctor.]
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_6;Allez, maintenant ! Hop hop ! Sautez !
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_7_direction;anxious
-spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_7;Vous êtes le majordome de la baronne, n'est-ce pas ?
+spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_7;Vous êtes le majordome de la Baronne, n'est-ce pas ?
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_8_direction;anxious
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_8;Je... Je ne voulais pas tuer votre maitresse !
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_9_direction;jovially
@@ -162,12 +162,12 @@ spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_12;Pourquoi faites-vous
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_13;Rien de personnel. Bon, ce n'est pas entièrement vrai. Vous êtes un pitoyable spécimen de l'espèce humaine, n'est-ce pas ?
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_14;Mais surtout, vous êtes un bon moyen d'arriver à nos fins. Votre mort mènera l'inspecteur Legrand hors de notre chemin.
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_15;L'inspecteur ? Qu'ai-je a voir avec lui ?
-spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_16;Votre lettre ! Celle dans laquelle vous confessez être le Corbeau et le meurtre de la Baronne parce qu'elle vous a percée à jour.
+spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_16;Votre lettre ! Celle dans laquelle vous confessez être le Corbeau et le meurtre de la Baronne parce qu'elle vous a percé à jour.
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_17;C'est absurde !
 sequences_a18_vorderdeck_seq_a18_vorderdeck_pistole#21;[Butler looks over to the Arab.]
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_18;En effet. Mais les gens sont prêt à croire presque à n'importe quoi si cela leur convient.
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_19;La presse va adorer ! En gras : L'inspecteur Legrand sauve encore la situation !
-spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_20;Les interviews, des médailles, des télégrammes urgents de la capitale... Notre cher ami ne sera plus en mesure d'échapper aux feu des projecteurs.
+spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_20;Les interviews, des médailles, des télégrammes urgents de la capitale... Notre cher ami ne sera plus en mesure d'échapper aux feux des projecteurs.
 spokentexts_a18_vorderdeck_seq_a18_vorderdeck_pistole_st_21;Et au moment où l'agitation retombera, je serai parti depuis longtemps.
 sequences_a18_vorderdeck_seq_a18_vorderdeck_pistole#26;[Butler looks back again to the doctor.]
 texts_arzt_top_a18_arzt_alte_geschichten_tseq_title;Histoires anciennes
@@ -179,10 +179,10 @@ spokentexts_arzt_top_a18_arzt_alte_geschichten_tseq_st_4_direction;whiny
 spokentexts_arzt_top_a18_arzt_alte_geschichten_tseq_st_4;Je... Je... Je l'aimais !
 spokentexts_arzt_top_a18_arzt_alte_geschichten_tseq_st_5_direction;reproachfully, decided
 spokentexts_arzt_top_a18_arzt_alte_geschichten_tseq_st_5;Elle m'a trahi. C'était de sa faute ! J'ai du sang sur les mains à cause d'elle !
-texts_arzt_top_a18_arzt_die_baronin_tseq_title;la baronne
-spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_1;"Est-ce pour cela que vous l'avez tuée ? La baronne faisait-elle partie de vos ""anciennes histoires"" ?"
-spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_2;Vous parlez de la baronne ?
-spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_3;Pourquoi avez-vous tué la baronne ?
+texts_arzt_top_a18_arzt_die_baronin_tseq_title;La Baronne
+spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_1;"Est-ce pour cela que vous l'avez tuée ? La Baronne faisait-elle partie de vos ""anciennes histoires"" ?"
+spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_2;Vous parlez de la Baronne ?
+spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_3;Pourquoi avez-vous tué la Baronne ?
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_4_direction;only angry, mild
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_4;C'était... C'était sa soeur.
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_5_direction;begins to reminisce
@@ -198,7 +198,7 @@ spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_12;J'ai vu son ventre rebondi 
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_13_direction;comes back to itself, seeking understanding
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_13;C'était l'un d'eux, vous comprenez ?
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_14_direction;only seeking understanding, then evil
-spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_14;Ils m'ont juste utilisés. Je les ai caché, leur apportait de la nourriture. Et en retour, ils se moquaient de moi derrière mon dos.
+spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_14;Ils m'ont juste utilisé. Je les ai cachés, leur apportait de la nourriture. Et en retour, ils se moquaient de moi derrière mon dos.
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_15_direction;depressed suspects terrible
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_15;Qu'avez-vous fait ?
 spokentexts_arzt_top_a18_arzt_die_baronin_tseq_st_16_direction;reveling in memories, repeating his words from the past
@@ -217,17 +217,17 @@ spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_6;Vous dites que vous l'ai
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_7_direction;convinced
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_7;Ils étaient en sécurité !
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_8_direction;convinced
-spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_8;Je les protégeais ! C'était pour eux que j'ai rejoint le parti. J'avais des contacts ! Je les ai enveloppé dans mon étreinte protectrice !
-spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_9;Vous ne l'avez pas laisser partir parce que vous vouliez la garder près de vous.
+spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_8;Je les protégeais ! C'était pour eux que j'ai rejoint le parti. J'avais des contacts ! Je les ai enveloppés dans mon étreinte protectrice !
+spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_9;Vous ne l'avez pas laissé partir parce que vous vouliez la garder près de vous.
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_10_direction;regretful
-spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_10;Elle a envoyée des photos a sa soeur avant la guerre. Elle a dû me reconnaitre hier à Venise. Tout comme je l'ai reconnue.
-spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_11;La baronne fouillait dans ses photos, c'est vrai.
-spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_12;Elle ne pouvait pas m'avoir pendant la guerre. Et après la guerre, j'ai suis disparu. Je me suis créer un nouveau nom, un nouveau C.V, une nouvelle vie.
+spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_10;Elle a envoyé des photos à sa soeur avant la guerre. Elle a dû me reconnaitre hier à Venise. Tout comme je l'ai reconnue.
+spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_11;La Baronne fouillait dans ses photos, c'est vrai.
+spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_12;Elle ne pouvait pas m'avoir pendant la guerre. Et après la guerre, j'ai disparu. Je me suis créer un nouveau nom, un nouveau C.V, une nouvelle vie.
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_13_direction;gloomy, disparagingly
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_13;Et puis soudain, elle déboule, prête à tout gâcher.
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_14;Donc, elle devait mourir.
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_15_direction;convinced reproachfully
-spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_15;Je ne voulais pas ça ! Elle ne m'a pas donné le choix !
+spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_15;Je ne voulais pas ça ! Elle ne m'a pas laissé le choix !
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_16_direction;convinced reproachfully
 spokentexts_arzt_top_a18_arzt_mord_an_baronin_tseq_st_16;Pourquoi devait-elle réveiller de vieux démons ?
 texts_arzt_top_a18_arzt_mord_an_familie_tseq_title;Assassinat de la famille
@@ -241,7 +241,7 @@ spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_5;C'est... c'était de sa 
 spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_6;Je...
 spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_7_direction;desperately looking for absolution
 spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_7;Je... Je l'ai sauvée. J'ai risqué ma vie pour elle tous les jours ! Pendant quatre mois !
-spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_8;Et puis vous avez mis tout ça de coté et vous êtes devenu un assassin.
+spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_8;Et puis vous avez mis tout ça de côté et vous êtes devenu un assassin.
 spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_9_direction;outraged, then he realizes that he is a murderer
 spokentexts_arzt_top_a18_arzt_mord_an_familie_tseq_st_9;JE NE SUIS PAS... Je suis...
 texts_arzt_top_a18_arzt_von_kiste_steigen_tseq_title;Descendre du rebord
